--- a/UniversityAPI/UniversityAPI/appsettings.json
+++ b/UniversityAPI/UniversityAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "Token":  "Project Genpact University Management System"
+    "Token":  "Project University Management System"
   },
   "Logging": {
     "LogLevel": {
